<resources>
    <string name="app_name">Extended UI Design</string>
    <string name="gateway_of_india_mumbai">Gateway of India, Mumbai</string>
    <string name="gateway_of_india_the_best_place_to_visit_in_mumbai_was_built_in_1924_by_george_willet_to_honour_the_visit_of_king_george_v_and_queen_mary_to_mumbai_visit_this_place_in_the_early_morning_or_late_evening_hours_to_enjoy_the_cool_breeze_of_the_sea_with_your_family_sans_the_crowd_located_next_to_the_iconic_taj_mahal_palace_and_facing_the_vast_arabian_sea_the_gateway_of_india_leaves_you_spellbound_in_every_way_possible_take_a_ferry_ride_offered_here_to_experience_a_stupendous_view_of_this_monument_right_from_the_sea_and_you_can_also_visit_other_main_attractions_nearby">Gateway of India, the best place to visit in Mumbai, was built in 1924 by George Willet to honour the visit of King George V and Queen Mary to Mumbai. Visit this place in the early morning or late evening hours to enjoy the cool breeze of the sea with your family sans the crowd. Located next to the iconic Taj Mahal Palace and facing the vast Arabian Sea, the Gateway of India leaves you spellbound in every way possible. Take a ferry ride offered here to experience a stupendous view of this monument right from the sea and you can also visit other main attractions nearby.</string>
    <string name="todo">TODO</string>
    <string name="_4_75">4.75</string>
    <string name="about">About</string>
    <string name="sanjay_gandhi_national_park_mumbai">Sanjay Gandhi National Park, Mumbai</string>
    <string name="red_carpet_wax_museum_mumbai">Red Carpet Wax Museum, Mumbai</string>
</resources>