<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:transitionName="background_image_transition"
    tools:context=".SecondActivity"
    tools:targetApi="LOLLIPOP">

    <ImageView
        android:id="@+id/second_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="356dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/second_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_back_arrow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/third_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/gateway_of_india_mumbai"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/third_ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:max="5"
                    android:numStars="5"
                    android:progressTint="@color/colorAccent"
                    android:rating="4.5"
                    android:stepSize="0.5"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/third_rating_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_4_75"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:alpha="0.9"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/gateway_of_india_the_best_place_to_visit_in_mumbai_was_built_in_1924_by_george_willet_to_honour_the_visit_of_king_george_v_and_queen_mary_to_mumbai_visit_this_place_in_the_early_morning_or_late_evening_hours_to_enjoy_the_cool_breeze_of_the_sea_with_your_family_sans_the_crowd_located_next_to_the_iconic_taj_mahal_palace_and_facing_the_vast_arabian_sea_the_gateway_of_india_leaves_you_spellbound_in_every_way_possible_take_a_ferry_ride_offered_here_to_experience_a_stupendous_view_of_this_monument_right_from_the_sea_and_you_can_also_visit_other_main_attractions_nearby"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/venue_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="Venue Type"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/venue_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.9"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="Historical"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/type_of_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="Map"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/type_of_view_text"
                android:layout_width="wrap_content"
                android:layout_height="520dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gateway_map"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>